fix(ci): 💚 add testing ci

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Extract environments
         shell: bash # cspell:ignore elif
         run: |
+          branch=${GITHUB_REF#refs/heads/}
           version="latest"
           if [ $branch != "develop" ]; then version=${{ steps.package.outputs.current-version }}; fi
           sed -i -e 's/$APP_VERSION/'"$version"'/g' "./sonar-project.properties"
