ci(vscode): 🔧 update vscode recommended extenstions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,74 +1,64 @@
 {
   "recommendations": [
-    "firsttris.vscode-jest-runner",
     "aaron-bond.better-comments",
     "ahmadawais.shades-of-purple",
-    "Angular.ng-template",
+    "angular.ng-template",
     "bradlc.vscode-tailwindcss",
-    "ckolkman.vscode-postgres",
     "codezombiech.gitignore",
-    "cweijan.vscode-mysql-client2",
-    "DavidAnson.vscode-markdownlint",
+    "davidanson.vscode-markdownlint",
     "dbaeumer.vscode-eslint",
-    "donjayamanne.githistory",
-    "DotJoshJohnson.xml",
+    "dotjoshjohnson.xml",
     "dqisme.sync-scroll",
     "dracula-theme.theme-dracula",
     "ducfilan.pug-formatter",
     "eamodio.gitlens",
     "ecmel.vscode-html-css",
-    "EditorConfig.EditorConfig",
+    "editorconfig.editorconfig",
     "eg2.vscode-npm-script",
     "esbenp.prettier-vscode",
     "foxundermoon.shell-format",
-    "GitHub.vscode-pull-request-github",
-    "humao.rest-client",
-    "humy2833.ftp-simple",
-    "IBM.output-colorizer",
-    "Ionic.ionic",
+    "github.vscode-pull-request-github",
+    "ibm.output-colorizer",
+    "ionic.ionic",
     "johnpapa.angular-essentials",
     "johnpapa.vscode-peacock",
     "johnpapa.winteriscoming",
-    "JustBrenny.hero-heroku",
+    "justbrenny.hero-heroku",
     "liviuschera.noctis",
     "me-dutour-mathieu.vscode-github-actions",
     "mhutchie.git-graph",
     "miguelsolorio.fluent-icons",
     "mikestead.dotenv",
     "mintlify.document",
-    "mongodb.mongodb-vscode",
     "mrmlnc.vscode-apache",
     "ms-azuretools.vscode-docker",
-    "ms-dotnettools.csharp",
     "ms-vscode-remote.remote-containers",
     "ms-vscode-remote.remote-ssh",
     "ms-vscode-remote.remote-ssh-edit",
     "ms-vscode-remote.remote-wsl",
     "ms-vscode-remote.vscode-remote-extensionpack",
-    "mtxr.sqltools",
     "myxvisual.vscode-ts-uml",
     "nrwl.angular-console",
     "pflannery.vscode-versionlens",
-    "PKief.material-icon-theme",
+    "pkief.material-icon-theme",
     "pnp.polacode",
     "pranaygp.vscode-css-peek",
     "quicktype.quicktype",
     "rangav.vscode-thunder-client",
     "rbbit.typescript-hero",
     "redhat.vscode-yaml",
-    "ritwickdey.live-sass",
-    "ritwickdey.LiveServer",
+    "ritwickdey.liveserver",
     "sdras.night-owl",
-    "Shan.code-settings-sync",
-    "shufo.vscode-blade-formatter",
+    "shan.code-settings-sync",
     "softwaredotcom.swdc-vscode",
     "streetsidesoftware.code-spell-checker",
     "streetsidesoftware.code-spell-checker-hebrew",
-    "VisualStudioExptTeam.vscodeintellicode",
+    "visualstudioexptteam.vscodeintellicode",
     "vivaxy.vscode-conventional-commits",
     "wayou.vscode-todo-highlight",
     "wix.vscode-import-cost",
     "zhuangtongfa.material-theme",
-    "Zignd.html-css-class-completion"
+    "zignd.html-css-class-completion",
+    "VisualStudioExptTeam.vscodeintellicode"
   ]
 }
