--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -2,15 +2,11 @@
   "*.{css,less,sass,scss}": [
     "stylelint",
     "prettier --write",
-    "npx cspell -c ./cspell.json"
+    "cspell -c ./cspell.json"
   ],
-  "*.{ts,js}": [
-    "eslint --fix",
-    "prettier --write",
-    "npx cspell -c ./cspell.json"
-  ],
+  "*.{ts,js}": ["eslint --fix", "prettier --write", "cspell -c ./cspell.json"],
   "!(*.{ts,js,css,less,sass,scss})": [
     "prettier --write --ignore-unknown",
-    "npx cspell -c cspell.json"
+    "cspell -c cspell.json"
   ]
 }
