--- a/apps/b-api/project.json
+++ b/apps/b-api/project.json
@@ -21,6 +21,10 @@
             {
               "replace": "apps/b-api/src/environments/environment.ts",
               "with": "apps/b-api/src/environments/environment.prod.ts"
+            },
+            {
+              "replace": "libs/shared/constants/src/lib/common-workspace-env/common-workspace-env.ts",
+              "with": "libs/shared/constants/src/lib/common-workspace-env/common-workspace-env.prod.ts"
             }
           ],
           "generatePackageJson": true
@@ -33,6 +37,10 @@
             {
               "replace": "apps/b-api/src/environments/environment.ts",
               "with": "apps/b-api/src/environments/environment.staging.ts"
+            },
+            {
+              "replace": "libs/shared/constants/src/lib/common-workspace-env/common-workspace-env.ts",
+              "with": "libs/shared/constants/src/lib/common-workspace-env/common-workspace-env.staging.ts"
             }
           ],
           "generatePackageJson": true
