--- a/apps/m-admin/project.json
+++ b/apps/m-admin/project.json
@@ -43,6 +43,10 @@
             {
               "replace": "apps/m-admin/src/environments/environment.ts",
               "with": "apps/m-admin/src/environments/environment.prod.ts"
+            },
+            {
+              "replace": "libs/shared/constants/src/lib/common-workspace-env/common-workspace-env.ts",
+              "with": "libs/shared/constants/src/lib/common-workspace-env/common-workspace-env.prod.ts"
             }
           ],
           "outputHashing": "all"
@@ -64,6 +68,10 @@
             {
               "replace": "apps/m-admin/src/environments/environment.ts",
               "with": "apps/m-admin/src/environments/environment.staging.ts"
+            },
+            {
+              "replace": "libs/shared/constants/src/lib/common-workspace-env/common-workspace-env.ts",
+              "with": "libs/shared/constants/src/lib/common-workspace-env/common-workspace-env.staging.ts"
             }
           ],
           "outputHashing": "all"
