--- a/apps/w-admin/project.json
+++ b/apps/w-admin/project.json
@@ -35,6 +35,10 @@
             {
               "replace": "apps/w-admin/src/environments/environment.ts",
               "with": "apps/w-admin/src/environments/environment.prod.ts"
+            },
+            {
+              "replace": "libs/shared/constants/src/lib/common-workspace-env/common-workspace-env.ts",
+              "with": "libs/shared/constants/src/lib/common-workspace-env/common-workspace-env.prod.ts"
             }
           ],
           "outputHashing": "all"
@@ -56,6 +60,10 @@
             {
               "replace": "apps/w-admin/src/environments/environment.ts",
               "with": "apps/w-admin/src/environments/environment.staging.ts"
+            },
+            {
+              "replace": "libs/shared/constants/src/lib/common-workspace-env/common-workspace-env.ts",
+              "with": "libs/shared/constants/src/lib/common-workspace-env/common-workspace-env.staging.ts"
             }
           ],
           "outputHashing": "all"
