--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,6 +49,40 @@ jobs:
           git pull origin staging
           git push
 
+  # Publish Sonar Release
+  sonar:
+    runs-on: ubuntu-latest
+    needs: semantic-release
+    steps:
+      # Get checkout
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      # Double Check The Latest Commit Pulled
+      - name: Pull From origin
+        run: |
+          git pull origin
+
+      # Get Package.json Version
+      - name: Get Package.json Version
+        id: package
+        uses: martinbeentjes/npm-get-version-action@main # cspell:ignore martinbeentjes
+
+      # Extract Environments
+      - name: Extract environments
+        shell: bash # cspell:ignore elif
+        run: |
+          sed -i -e 's/$APP_VERSION/'"${{ steps.package.outputs.current-version }}"'/g' "./sonar-project.properties"
+
+      # Run Sonarqube
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master # cspell:ignore sonarcloud
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
   # Publish New Release To Sentry
   sentry:
     runs-on: ubuntu-latest
