fix(test): 🧪 testing staging server for updates

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Nitro System",
   "version": "1.1.12",
   "private": true,
-  "description": "Nitro System Project",
+  "description": "Nitro System Project test",
   "keywords": [
     "nitro",
     "angular",
