fix(github): 💚 fix ci commands and docker build

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Nitro System",
   "version": "1.1.14",
   "private": true,
-  "description": "Nitro System Project test",
+  "description": "Nitro System Project test22",
   "keywords": [
     "nitro",
     "angular",
