fix(github): 💚 fix ci commands and docker build

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,7 @@ jobs:
   # Publish Sonar Release
   sonar:
     runs-on: ubuntu-latest
-    needs: semantic-release
+    needs: deploy
     steps:
       # Get checkout
       - name: Checkout
@@ -86,7 +86,7 @@ jobs:
   # Publish New Release To Sentry
   sentry:
     runs-on: ubuntu-latest
-    needs: semantic-release
+    needs: deploy
     steps:
       # Get checkout
       - name: Checkout
@@ -169,18 +169,14 @@ jobs:
   # Build and push images to docker hub
   docker:
     runs-on: ubuntu-latest
-    needs: semantic-release
+    needs: deploy
     steps:
       # Get checkout
       - name: Checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
-      # Double Check The Latest Commit Pulled
-      - name: Pull From origin
-        run: |
-          git pull origin
+          ref: staging
 
       # Extract Environments
       - name: Extract environments
