--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -169,7 +169,7 @@ jobs:
   # Build and push images to docker hub
   docker:
     runs-on: ubuntu-latest
-    needs: deploy
+    needs: semantic-release
     steps:
       # Get checkout
       - name: Checkout
