--- a/.releaserc.json
+++ b/.releaserc.json
@@ -10,7 +10,7 @@
       "@semantic-release/git",
       {
         "assets": ["CHANGELOG.md", "package.json"],
-        "message": "docs(release): ${nextRelease.version} [skip ci]"
+        "message": "docs(release): ${nextRelease.version}"
       }
     ],
     "@semantic-release/github"
