fix(github): 💚 fix ci commands and docker build

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,11 +30,11 @@ jobs:
           npm i -g semantic-release @semantic-release/git @semantic-release/changelog @semantic-release/exec
           npx semantic-release
         env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-          GIT_AUTHOR_NAME: Omar Elsayed
-          GIT_AUTHOR_EMAIL: omar.alsayed@syscodeia.ae
-          GIT_COMMITTER_NAME: Omar Elsayed
-          GIT_COMMITTER_EMAIL: omar.alsayed@syscodeia.ae
+          GITHUB_TOKEN: ${{secrets.MY_GITHUB_TOKEN}}
+          GIT_AUTHOR_NAME: github-actions
+          GIT_AUTHOR_EMAIL: github-actions@github.com
+          GIT_COMMITTER_NAME: github-actions
+          GIT_COMMITTER_EMAIL: github-actions@github.com
 
       # Checkout Develop
       - name: Checkout Develop
