--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,10 +31,10 @@ jobs:
           npx semantic-release
         env:
           GITHUB_TOKEN: ${{secrets.MY_GITHUB_TOKEN}}
-          GIT_AUTHOR_NAME: github-actions
-          GIT_AUTHOR_EMAIL: github-actions@github.com
-          GIT_COMMITTER_NAME: github-actions
-          GIT_COMMITTER_EMAIL: github-actions@github.com
+          GIT_AUTHOR_NAME: Omar Elsayed
+          GIT_AUTHOR_EMAIL: omar-alsayed@syscodeia.ae
+          GIT_COMMITTER_NAME: Omar Elsayed
+          GIT_COMMITTER_EMAIL: omar-alsayed@syscodeia.ae
 
       # Checkout Develop
       - name: Checkout Develop
