--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,14 +36,43 @@ jobs:
           GIT_COMMITTER_NAME: Omar Elsayed
           GIT_COMMITTER_EMAIL: omar-alsayed@syscodeia.ae
 
-      # Checkout Develop
-      - name: Checkout Develop
+      # # Checkout Develop
+      # - name: Checkout Develop
+      #   uses: actions/checkout@v3
+      #   with:
+      #     ref: develop
+
+      # # Pull From `Staging` to `Develop`
+      # - name: Pull From `Staging` to `Develop`
+      #   run: |
+      #     git pull origin staging
+      #     git push
+
+  # Publish Sonar Release
+  sonar:
+    runs-on: ubuntu-latest
+    needs: semantic-release
+    steps:
+      # Get checkout
+      - name: Checkout
         uses: actions/checkout@v3
         with:
-          ref: develop
+          fetch-depth: 0
 
-      # Pull From `Staging` to `Develop`
-      - name: Pull From `Staging` to `Develop`
+      # Double Check The Latest Commit Pulled
+      - name: Pull From origin
         run: |
-          git pull origin staging
-          git push
+          git pull origin
+
+      # Get Package.json Version
+      - name: Get Package.json Version
+        id: package
+        uses: martinbeentjes/npm-get-version-action@main # cspell:ignore martinbeentjes
+
+      # Extract Environments
+      - name: Extract environments
+        shell: bash # cspell:ignore elif
+        run: |
+          ls
+          cat package.json
+          echo ${{ steps.package.outputs.current-version }}
