fix(github): 💚 fix ci commands and docker build

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -68,6 +68,7 @@ jobs:
       - name: Extract environments
         shell: bash # cspell:ignore elif
         run: |
+          git -v
           ls
           cat package.json
           echo ${{ steps.package.outputs.current-version }}
