fix(github): 💚 fix ci commands and docker build

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
 # cspell:ignore buildx getsentry sourcemaps gonuit
 
-name: Publish a new release
+name: Deploy the new release
 
 # Only trigger, when the build workflow succeeded
 on:
