--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,6 @@ jobs:
   # Publish Sonar Release
   sonar:
     runs-on: ubuntu-latest
-    needs: deploy
     steps:
       # Get checkout
       - name: Checkout
@@ -43,7 +42,6 @@ jobs:
   # Publish New Release To Sentry
   sentry:
     runs-on: ubuntu-latest
-    needs: deploy
     steps:
       # Get checkout
       - name: Checkout
@@ -133,21 +131,13 @@ jobs:
         shell: bash # cspell:ignore elif
         run: |
           branch=${GITHUB_REF#refs/heads/}
+          echo $branch
           echo "env=$(if [ $branch = 'staging' ]; then echo 'staging'; else echo 'production'; fi)" >> $GITHUB_ENV
 
       # Get Package.json Version
       - name: Get Package.json Version
         id: package
         uses: martinbeentjes/npm-get-version-action@main # cspell:ignore martinbeentjes
-
-      # Extract Environments
-      - name: Echo Package.json
-        shell: bash # cspell:ignore elif
-        run: |
-          ls
-          cat CHANGELOG.md
-          cat ./package.json
-          echo ${{ steps.package.outputs.current-version }}
 
       # Set up Docker Buildx
       - name: Set up Docker Buildx
@@ -231,14 +221,6 @@ jobs:
       - name: Get Package.json Version
         id: package
         uses: martinbeentjes/npm-get-version-action@main # cspell:ignore martinbeentjes
-
-      # Extract Environments
-      - name: Echo Package.json
-        shell: bash # cspell:ignore elif
-        run: |
-          ls
-          cat package.json
-          echo ${{ steps.package.outputs.current-version }}
 
       # Copy shell files to the server
       - name: Copy shell files to the server
