--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -18,9 +18,9 @@ jobs:
         with:
           fetch-depth: 0
 
-      # Extract Environments
-      - name: Extract environments
-        shell: bash # cspell:ignore elif
+      #  Replace Sonar Project Version
+      - name: Replace Sonar Project Version
+        shell: bash
         run: |
           sed -i -e 's/$APP_VERSION/latest/g' "./sonar-project.properties"
 
@@ -28,5 +28,5 @@ jobs:
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master # cspell:ignore sonarcloud
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
