--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,11 +54,20 @@ jobs:
     runs-on: ubuntu-latest
     needs: semantic-release
     steps:
+      # Extract Environments
+      - name: Extract environments
+        shell: bash # cspell:ignore elif
+        run: |
+          branch=${GITHUB_REF#refs/heads/}
+          echo "env=$(if [ $branch = 'staging' ]; then echo 'staging'; else echo 'production'; fi)" >> $GITHUB_ENV
+          echo "branch=$branch" >> $GITHUB_ENV
+
       # Get checkout
       - name: Checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          ref: ${{ env.branch }}
 
       # Get Package.json Version
       - name: Get Package.json Version
