feat(ci): ➕ add new package `sort-package-json` to sort package.json file

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -59,6 +59,7 @@
     "wix.vscode-import-cost",
     "zhuangtongfa.material-theme",
     "zignd.html-css-class-completion",
-    "VisualStudioExptTeam.vscodeintellicode"
+    "VisualStudioExptTeam.vscodeintellicode",
+    "streetsidesoftware.code-spell-checker-arabic"
   ]
 }
