--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -2,16 +2,16 @@
   "*.{css,less,sass,scss}": [
     "stylelint",
     "prettier --write",
-    "npx cspell -c ./cspell.json"
+    "cspell -c cspell.json --no-must-find-files"
   ],
   "*.{ts,js}": [
     "eslint --fix",
     "prettier --write",
-    "npx cspell -c ./cspell.json"
+    "cspell -c cspell.json --no-must-find-files"
   ],
-  "package.json": ["npx sort-package-json"],
+  "package.json": ["sort-package-json"],
   "!(*.{ts,js,css,less,sass,scss}|package.json)": [
     "prettier --write --ignore-unknown",
-    "npx cspell -c cspell.json"
+    "cspell -c cspell.json --no-must-find-files"
   ]
 }
