--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
+    "sort-package-json": "^1.57.0",
     "storybook-addon-angular-router": "^1.6.0",
     "stylelint": "^14.9.1",
     "stylelint-config-idiomatic-order": "^8.1.0",
