--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,3 +24,14 @@ services:
     image: nitrosystem/m_admin:${APP_VERSION}-${APP_STAGE}
     ports:
       - 4002:80
+
+  # Reverse Proxy
+  reverse-proxy:
+    container_name: nitrosystem-reverse_proxy_${APP_STAGE}
+    depends_on:
+      - b-api
+      - w-admin
+      - m-admin
+    image: nitrosystem/reverse_proxy:${APP_VERSION}-${APP_STAGE}
+    ports:
+      - 80:80
