--- a/nginx.reverse-proxy.conf
+++ b/nginx.reverse-proxy.conf
@@ -2,7 +2,7 @@ server {
   listen 80;
   server_name "www.web-admin.$STAGE.nitro.ng-omar.com" "web-admin.$STAGE.nitro.ng-omar.com";
   location / {
-    proxy_pass http://localhost:4001;
+    proxy_pass http://w-admin;
   }
 }
 
@@ -10,7 +10,7 @@ server {
   listen 80;
   server_name "www.mobile-admin.$STAGE.nitro.ng-omar.com" "mobile-admin.$STAGE.nitro.ng-omar.com";
   location / {
-    proxy_pass http://localhost:4002;
+    proxy_pass http://m-admin;
   }
 }
 
@@ -18,6 +18,6 @@ server {
   listen 80;
   server_name "www.api.$STAGE.nitro.ng-omar.com" "api.$STAGE.nitro.ng-omar.com";
   location / {
-    proxy_pass http://localhost:3000;
+    proxy_pass http://b-api:3000;
   }
 }
