--- a/nginx.reverse-proxy.conf
+++ b/nginx.reverse-proxy.conf
@@ -1,5 +1,6 @@
 server {
   listen 80;
+  listen [::]:80;
   server_name "www.web-admin.$STAGE.nitro.ng-omar.com" "web-admin.$STAGE.nitro.ng-omar.com";
   location / {
     proxy_pass http://w-admin;
@@ -8,6 +9,7 @@ server {
 
 server {
   listen 80;
+  listen [::]:80;
   server_name "www.mobile-admin.$STAGE.nitro.ng-omar.com" "mobile-admin.$STAGE.nitro.ng-omar.com";
   location / {
     proxy_pass http://m-admin;
@@ -16,6 +18,7 @@ server {
 
 server {
   listen 80;
+  listen [::]:80;
   server_name "www.api.$STAGE.nitro.ng-omar.com" "api.$STAGE.nitro.ng-omar.com";
   location / {
     proxy_pass http://b-api:3000;
