fix(docker): 🚑️ fix build docker reverse proxy image

--- a/nginx.reverse-proxy.conf
+++ b/nginx.reverse-proxy.conf
@@ -18,12 +18,12 @@ server {
   listen [::]:443 ssl http2;
   server_name "www.web-admin.$STAGE.nitro.ng-omar.com" "web-admin.$STAGE.nitro.ng-omar.com";
 
-  ssl_certificate /etc/letsencrypt/live/web-admin.$STAGE.nitro.ng-omar.com/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/web-admin.$STAGE.nitro.ng-omar.com/privkey.pem;
-  ssl_certificate /etc/letsencrypt/live/www.web-admin.$STAGE.nitro.ng-omar.com/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/www.web-admin.$STAGE.nitro.ng-omar.com/privkey.pem;
-  include /etc/letsencrypt/options-ssl-nginx.conf;
-  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+  # ssl_certificate /etc/letsencrypt/live/web-admin.$STAGE.nitro.ng-omar.com/fullchain.pem;
+  # ssl_certificate_key /etc/letsencrypt/live/web-admin.$STAGE.nitro.ng-omar.com/privkey.pem;
+  # ssl_certificate /etc/letsencrypt/live/www.web-admin.$STAGE.nitro.ng-omar.com/fullchain.pem;
+  # ssl_certificate_key /etc/letsencrypt/live/www.web-admin.$STAGE.nitro.ng-omar.com/privkey.pem;
+  # include /etc/letsencrypt/options-ssl-nginx.conf;
+  # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
   location / {
     proxy_pass http://w-admin;
@@ -38,12 +38,12 @@ server {
   listen [::]:443 ssl;
   server_name "www.mobile-admin.$STAGE.nitro.ng-omar.com" "mobile-admin.$STAGE.nitro.ng-omar.com";
 
-  ssl_certificate /etc/letsencrypt/live/web-admin.$STAGE.nitro.ng-omar.com/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/web-admin.$STAGE.nitro.ng-omar.com/privkey.pem;
-  ssl_certificate /etc/letsencrypt/live/www.web-admin.$STAGE.nitro.ng-omar.com/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/www.web-admin.$STAGE.nitro.ng-omar.com/privkey.pem;
-  include /etc/letsencrypt/options-ssl-nginx.conf;
-  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+  # ssl_certificate /etc/letsencrypt/live/web-admin.$STAGE.nitro.ng-omar.com/fullchain.pem;
+  # ssl_certificate_key /etc/letsencrypt/live/web-admin.$STAGE.nitro.ng-omar.com/privkey.pem;
+  # ssl_certificate /etc/letsencrypt/live/www.web-admin.$STAGE.nitro.ng-omar.com/fullchain.pem;
+  # ssl_certificate_key /etc/letsencrypt/live/www.web-admin.$STAGE.nitro.ng-omar.com/privkey.pem;
+  # include /etc/letsencrypt/options-ssl-nginx.conf;
+  # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
   location / {
     proxy_pass http://m-admin;
@@ -58,12 +58,12 @@ server {
   listen [::]:443 ssl;
   server_name "www.api.$STAGE.nitro.ng-omar.com" "api.$STAGE.nitro.ng-omar.com";
 
-  ssl_certificate /etc/letsencrypt/live/web-admin.$STAGE.nitro.ng-omar.com/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/web-admin.$STAGE.nitro.ng-omar.com/privkey.pem;
-  ssl_certificate /etc/letsencrypt/live/www.web-admin.$STAGE.nitro.ng-omar.com/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/www.web-admin.$STAGE.nitro.ng-omar.com/privkey.pem;
-  include /etc/letsencrypt/options-ssl-nginx.conf;
-  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+  # ssl_certificate /etc/letsencrypt/live/web-admin.$STAGE.nitro.ng-omar.com/fullchain.pem;
+  # ssl_certificate_key /etc/letsencrypt/live/web-admin.$STAGE.nitro.ng-omar.com/privkey.pem;
+  # ssl_certificate /etc/letsencrypt/live/www.web-admin.$STAGE.nitro.ng-omar.com/fullchain.pem;
+  # ssl_certificate_key /etc/letsencrypt/live/www.web-admin.$STAGE.nitro.ng-omar.com/privkey.pem;
+  # include /etc/letsencrypt/options-ssl-nginx.conf;
+  # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
   location / {
     proxy_pass http://b-api:3000;
