--- a/nginx.reverse-proxy.conf
+++ b/nginx.reverse-proxy.conf
@@ -1,21 +1,20 @@
+# server {
+#   listen 80;
+#   listen [::]:80;
+#   server_name _;
+#   server_tokens off;
+
+#   location /.well-known/acme-challenge/ {
+#     root /var/www/certbot;
+#   }
+
+#   location / {
+#     return 301 https://$host$request_uri;
+#   }
+# }
 server {
   listen 80;
   listen [::]:80;
-  server_name _;
-  server_tokens off;
-
-  location /.well-known/acme-challenge/ {
-    root /var/www/certbot;
-  }
-
-  location / {
-    return 301 https://$host$request_uri;
-  }
-}
-
-server {
-  listen 443 default_server ssl http2;
-  listen [::]:443 ssl http2;
   server_name "www.web-admin.$STAGE.nitro.ng-omar.com" "web-admin.$STAGE.nitro.ng-omar.com";
 
   # ssl_certificate /etc/letsencrypt/live/web-admin.$STAGE.nitro.ng-omar.com/fullchain.pem;
@@ -34,8 +33,8 @@ server {
 }
 
 server {
-  listen 443 ssl;
-  listen [::]:443 ssl;
+  listen 80;
+  listen [::]:80;
   server_name "www.mobile-admin.$STAGE.nitro.ng-omar.com" "mobile-admin.$STAGE.nitro.ng-omar.com";
 
   # ssl_certificate /etc/letsencrypt/live/web-admin.$STAGE.nitro.ng-omar.com/fullchain.pem;
@@ -54,8 +53,8 @@ server {
 }
 
 server {
-  listen 443 ssl;
-  listen [::]:443 ssl;
+  listen 80;
+  listen [::]:80;
   server_name "www.api.$STAGE.nitro.ng-omar.com" "api.$STAGE.nitro.ng-omar.com";
 
   # ssl_certificate /etc/letsencrypt/live/web-admin.$STAGE.nitro.ng-omar.com/fullchain.pem;
