--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@angular/animations": "~14.1.0",
     "@angular/common": "~14.1.0",
     "@angular/compiler": "~14.1.0",
-    "@angular/core": "~14.1.0",
+    "@angular/core": "14.1.0",
     "@angular/forms": "~14.1.0",
     "@angular/platform-browser": "~14.1.0",
     "@angular/platform-browser-dynamic": "~14.1.0",
@@ -56,12 +56,12 @@
     "@capacitor/keyboard": "1.2.3",
     "@capacitor/status-bar": "1.0.8",
     "@ionic/angular": "^6.1.15",
-    "@nestjs/common": "^9.0.5",
-    "@nestjs/core": "^9.0.5",
+    "@nestjs/common": "9.0.7",
+    "@nestjs/core": "9.0.7",
     "@nestjs/mapped-types": "1.1.0",
-    "@nestjs/platform-express": "^9.0.5",
-    "@nrwl/angular": "14.4.3",
-    "@nrwl/nx-cloud": "^14.2.0",
+    "@nestjs/platform-express": "9.0.7",
+    "@nrwl/angular": "14.5.1",
+    "@nrwl/nx-cloud": "14.2.0",
     "@sentry/angular": "^7.7.0",
     "@sentry/cli": "^2.5.0",
     "@sentry/minimal": "^6.19.7",
@@ -78,24 +78,24 @@
     "@angular-eslint/eslint-plugin": "~14.0.2",
     "@angular-eslint/eslint-plugin-template": "~14.0.2",
     "@angular-eslint/template-parser": "~14.0.2",
-    "@angular/cli": "~14.1.0",
+    "@angular/cli": "14.1.0",
     "@angular/compiler-cli": "~14.1.0",
     "@angular/language-service": "~14.1.0",
     "@capacitor/cli": "3.6.0",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@ionic/angular-toolkit": "^7.0.0",
-    "@nestjs/schematics": "^9.0.1",
-    "@nestjs/testing": "^9.0.5",
-    "@nrwl/cli": "14.4.3",
-    "@nrwl/cypress": "14.4.3",
-    "@nrwl/eslint-plugin-nx": "14.4.3",
-    "@nrwl/jest": "14.4.3",
-    "@nrwl/linter": "14.4.3",
-    "@nrwl/nest": "14.4.3",
-    "@nrwl/node": "14.4.3",
-    "@nrwl/storybook": "14.4.3",
-    "@nrwl/workspace": "14.4.3",
+    "@nestjs/schematics": "9.0.1",
+    "@nestjs/testing": "9.0.7",
+    "@nrwl/cli": "14.5.1",
+    "@nrwl/cypress": "14.5.1",
+    "@nrwl/eslint-plugin-nx": "14.5.1",
+    "@nrwl/jest": "14.5.1",
+    "@nrwl/linter": "14.5.1",
+    "@nrwl/nest": "14.5.1",
+    "@nrwl/node": "14.5.1",
+    "@nrwl/storybook": "14.5.1",
+    "@nrwl/workspace": "14.5.1",
     "@storybook/addon-a11y": "^6.5.9",
     "@storybook/addon-essentials": "~6.5.9",
     "@storybook/addon-storysource": "^6.5.9",
@@ -124,7 +124,7 @@
     "jest": "27.5.1",
     "jest-preset-angular": "~11.1.2",
     "lint-staged": "^13.0.3",
-    "nx": "14.4.3",
+    "nx": "14.5.1",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
