--- a/.releaserc.json
+++ b/.releaserc.json
@@ -4,12 +4,17 @@
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     ["@semantic-release/changelog", { "changelogFile": "CHANGELOG.md" }],
-    ["@semantic-release/exec", { "prepareCmd": "npx prettier . --write" }],
+    [
+      "@semantic-release/exec",
+      {
+        "prepareCmd": "npx prettier CHANGELOG.md package.json package-lock.json --write"
+      }
+    ],
     ["@semantic-release/npm", { "npmPublish": false }],
     [
       "@semantic-release/git",
       {
-        "assets": ["CHANGELOG.md", "package.json"],
+        "assets": ["CHANGELOG.md", "package.json", "package-lock.json"],
         "message": "docs(release): ${nextRelease.version}"
       }
     ],
