test(core): ✅ upgrade cypress package to `10.3.1` and correct e2e testing

--- a/apps/m-admin-e2e/project.json
+++ b/apps/m-admin-e2e/project.json
@@ -6,8 +6,9 @@
     "e2e": {
       "executor": "@nrwl/cypress:cypress",
       "options": {
-        "cypressConfig": "apps/m-admin-e2e/cypress.json",
-        "devServerTarget": "m-admin:serve:development"
+        "cypressConfig": "apps/m-admin-e2e/cypress.config.ts",
+        "devServerTarget": "m-admin:serve:development",
+        "testingType": "e2e"
       },
       "configurations": {
         "production": {
