--- a/apps/frontend-home-e2e/project.json
+++ b/apps/frontend-home-e2e/project.json
@@ -6,8 +6,9 @@
     "e2e": {
       "executor": "@nrwl/cypress:cypress",
       "options": {
-        "cypressConfig": "apps/frontend-home-e2e/cypress.json",
-        "devServerTarget": "frontend-home:storybook"
+        "cypressConfig": "apps/frontend-home-e2e/cypress.config.ts",
+        "devServerTarget": "frontend-home:storybook",
+        "testingType": "e2e"
       },
       "configurations": {
         "ci": {
