--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "ng": "nx",
     "prepare": "husky install",
     "start": "nx run-many --target=serve --all --parallel=false",
-    "test": "npm run check:test && npm run check:e2e && npm run check:lint"
+    "test": "npm run check:test && npm run check:e2e && npm run check:lint",
+    "test:all": "npm run test && npm run build && npx cspell --no-progress --show-suggestions --show-context && npx prettier . --check && npx stylelint \"{apps,libs}/**/*.{css,less,sass,scss,sss}\""
   },
   "dependencies": {
     "@angular/animations": "~14.1.0",
@@ -106,13 +107,13 @@
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.4",
     "@types/jest": "27.4.1",
-    "@types/node": "18.0.5",
+    "@types/node": "18.6.3",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "autoprefixer": "^10.4.8",
     "cross-env": "^7.0.3",
     "cspell": "^6.5.0",
-    "cypress": "^9.7.0",
+    "cypress": "^10.3.1",
     "eslint": "^8.20.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
